[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micasense"
version = "0.1.0"
description = "MicaSense Image Processing Library for RedEdge-P"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "scipy",
    "pysolar",
    "pytz"
]

[tool.setuptools]
packages = ["micasense"]